# SafeDance

./: .gitignore  note.md  test_my_ppo_import.py
whole_body_tracking/: .gitignore  commands.md  compare_motion_npz.py  pyproject.toml  rename.sh
whole_body_tracking/.weiji/: .alias  pack_logs.py  readme.md  syncfile.py  tempgen.py  touchgpu.py  traintestsplit.sh  unpack_logs.py
whole_body_tracking/.weiji/.exp/: 0910-LargeNetAblPriv.sh  0910-LargeNetAblPriv8K.sh  0911-DebugMJC-LargeAAC.sh  0911-DebugMJC-LargeNPO.sh  0911-DebugMJC-WoSE.sh  0911-DebugMJC.sh  0915-PGObs.sh
whole_body_tracking/.weiji/.ssh/: id_srd  id_srd.pub
whole_body_tracking/deploy/: deploy_mujoco.py  deploy_real.py
whole_body_tracking/deploy/deploy_mujoco_sjy_multi/: bydmimic_controller.py  mujoco_sim.py  multi_controller.py  single_controller.py
whole_body_tracking/deploy/deploy_mujoco_sjy_multi/camera/: depth_imgs_clean.npy
whole_body_tracking/scripts/: csv_to_npz.py  csv_to_npz_dir.py  pkl_to_npz.py  pkl_to_npz_dir.py  pkl_to_npz_mjc.py  pklpack_to_npz.py  replay_npz.py
whole_body_tracking/scripts/rsl_rl/: eval.py  play.py  play1.py  play2.py  play_1.py  train.py  train_1.py
whole_body_tracking/source/whole_body_tracking/whole_body_tracking/tasks/tracking/: tracking_env_cfg.py
whole_body_tracking/source/whole_body_tracking/whole_body_tracking/tasks/tracking/mdp/: __init__.py  commands.py  commands_force.py  commands_multi.py  commands_multi_cpu.py  events.py  rewards.py  (+2 more)
whole_body_tracking/source/whole_body_tracking/whole_body_tracking/utils/: exporter.py  my_on_policy_runner.py
(+11 files in other folders)
